Prepare 2.0 release